Base de diseño de vistas

--- a/app/src/main/res/layout/fragment_credit.xml
+++ b/app/src/main/res/layout/fragment_credit.xml
@@ -7,18 +7,71 @@
     android:layout_height="match_parent"
     tools:context=".ui.credit.CreditFragment">
 
-    <TextView
-        android:id="@+id/tv_credit"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@drawable/bottom_corners_bg"
+        android:elevation="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/topGuide"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/loans_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="36dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="36dp"
+            android:fontFamily="@font/gotham_medium"
+            android:gravity="center"
+            android:text="Porcentaje total pagado"
+            android:textColor="@color/primary_text"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.mikhaellopez.circularprogressbar.CircularProgressBar
+            android:id="@+id/circularProgress"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_margin="16dp"
+            app:cpb_progress_max="100"
+            app:cpb_progressbar_color="@color/translucent_white"
+            app:cpb_round_border="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/loans_title" />
+
+        <TextView
+            android:id="@+id/percentageText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/gotham_medium"
+            android:text="70%"
+            android:textColor="@color/primary_text"
+            android:textSize="30sp"
+            app:layout_constraintBottom_toBottomOf="@id/circularProgress"
+            app:layout_constraintEnd_toEndOf="@id/circularProgress"
+            app:layout_constraintStart_toStartOf="@id/circularProgress"
+            app:layout_constraintTop_toTopOf="@id/circularProgress" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/topGuide"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.3" />
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/loansRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/topGuide"
+        tools:listitem="@layout/loan_row" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
