--- a/app/src/main/res/layout/favorite_transfer_row.xml
+++ b/app/src/main/res/layout/favorite_transfer_row.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginEnd="8dp"
-    android:backgroundTint="@color/primary_dark"
+    android:backgroundTint="@color/primary"
     app:cardCornerRadius="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
