--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -60,7 +60,7 @@
                     android:layout_marginEnd="8dp"
                     android:fontFamily="@font/gotham_medium"
                     android:text="@string/empty_amount"
-                    android:textColor="@color/primary_text"
+                    android:textColor="@color/secondary_text"
                     android:textSize="26sp"
                     app:layout_constraintBottom_toBottomOf="@id/profilePhotoImageView"
                     app:layout_constraintEnd_toEndOf="@id/horizontalGuide"
@@ -74,7 +74,7 @@
                     android:layout_marginEnd="8dp"
                     android:fontFamily="@font/gotham_medium"
                     android:text="****  6288"
-                    android:textColor="@color/primary_text"
+                    android:textColor="@color/secondary_text"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@id/horizontalGuide"
@@ -173,7 +173,7 @@
                     android:layout_marginStart="8dp"
                     android:fontFamily="@font/gotham_medium"
                     android:text="Límite de transferencia mensual"
-                    android:textColor="@color/primary_text"
+                    android:textColor="@color/secondary_text"
                     app:autoSizeTextType="uniform"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/circularProgress"
@@ -185,7 +185,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/gotham_medium"
                     android:text="$70.000"
-                    android:textColor="@color/primary_dark"
+                    android:textColor="@color/primary"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/of"
                     app:layout_constraintHorizontal_bias="0.5"
@@ -209,7 +209,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/gotham_medium"
                     android:text="$4'500.000"
-                    android:textColor="@color/primary_dark"
+                    android:textColor="@color/primary"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toEndOf="@+id/of"
@@ -227,7 +227,7 @@
             android:layout_marginTop="36dp"
             android:fontFamily="@font/gotham_medium"
             android:text="Transacciones"
-            android:textColor="@color/primary_text"
+            android:textColor="@color/secondary_text"
             android:textSize="22sp"
             app:layout_constraintEnd_toEndOf="@id/balanceCardView"
             app:layout_constraintStart_toStartOf="@id/balanceCardView"
